--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -16,6 +17,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.9.0",
+    "helmet": "^4.3.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.11.8",
     "morgan": "~1.9.1",
@@ -24,5 +26,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
+  },
+  "engines": {
+    "node": "14.0.0"
   }
 }
